# RetroFE

./: .gitignore  CHANGELOG  README.md  contributors.txt
Configuration/: Configuration.sln
Configuration/Configuration/: App.xaml  App.xaml.cs  Builder.cs  ConfFileParser.cs  ConfFileSaver.cs  Configuration.csproj  MainWindow.xaml  MainWindow.xaml.cs  MenuParser.cs  RelayCommand.cs  RetroFE.cs
Configuration/Configuration/Converter/: CollectionExistsConverter.cs  InverseBooleanConverter.cs  InverseBooleanToVisibilityConverter.cs  NullToVisibilityConverter.cs
Configuration/Configuration/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Configuration/Configuration/View/: AddRemoveList.xaml  AddRemoveList.xaml.cs  Collection.xaml  Collection.xaml.cs  ControlInput.xaml  ControlInput.xaml.cs  Launcher.xaml  Launcher.xaml.cs  MainSettings.xaml  MainSettings.xaml.cs
Configuration/Configuration/ViewModel/: CollectionListVM.cs  CollectionVM.cs  ControllerVM.cs  LauncherListVM.cs  LauncherVM.cs  MainVM.cs
Guide/: COLLECTIONS.md  CONTROLS.md  GETTING_STARTED.md  GLOBAL_SETTINGS.md  LAUNCHERS.md  LAYOUTS.md  META_INFORMATION.md  PLAYGROUND.md  README.md  SETTINGS.md
Package/Environment/Common/: README.txt  controls.conf  settings.conf
Package/Environment/Common/collections/: CREATING_COLLECTIONS.txt
Package/Environment/Common/collections/MAME/: info.conf  settings.conf
Package/Environment/Common/collections/MAME/system_artwork/: story.txt
Package/Environment/Common/collections/Main/: menu.txt  settings.conf
Package/Environment/Common/collections/Sega Genesis/: settings.conf
Package/Environment/Common/collections/Sega Genesis/medium_artwork/story/: Zero Tolerance (USA, Europe).txt
Package/Environment/Common/launchers/: Main.conf  mame.conf
Package/Environment/Common/layouts/Aeon Nox/: credits.txt  layout 4x3.xml  layout.xml  readme.txt  splash.xml
Package/Environment/Common/meta/hyperlist/: Sega Genesis.xml
Package/Environment/Linux/: README-UBUNTU.txt
Package/Environment/MacOS/RetroFE.app/Contents/: Info.plist
Package/Environment/MacOS/RetroFE.app/Contents/Resources/: Misev.icns
Package/Environment/MacOS/collections/: CREATING_COLLECTIONS.txt
Package/Environment/MacOS/collections/Sega Genesis/: settings.conf
Package/Environment/MacOS/launchers/: Genesis.conf  MAME.conf
Package/Environment/Windows/: RetroFE.lnk
Package/Environment/Windows/core/: gstreamer.txt
Package/Environment/Windows/launchers/: fusion.conf  rocketlauncher.conf
RetroFE/CMake/: FindGStreamer.cmake  FindGlib2.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
RetroFE/DesignNotes/UML/: Components.class.violet.html  Item Database Access.class.violet.html  Menu List rendering.class.violet.html  Overview.class.violet.html  Page Building.class.violet.html  Video Component.class.violet.html
RetroFE/Scripts/: SetupEnvironment.bat
RetroFE/Source/: CMakeLists.txt  Main.cpp  RetroFE.cpp  RetroFE.h  SDL.cpp  SDL.h  Version.cpp  Version.h
RetroFE/Source/Collection/: CollectionInfo.cpp  CollectionInfo.h  CollectionInfoBuilder.cpp  CollectionInfoBuilder.h  Item.cpp  Item.h  MenuParser.cpp  MenuParser.h
RetroFE/Source/Control/: InputHandler.h  JoyAxisHandler.cpp  JoyAxisHandler.h  JoyButtonHandler.cpp  JoyButtonHandler.h  JoyHatHandler.cpp  JoyHatHandler.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseButtonHandler.cpp  MouseButtonHandler.h  UserInput.cpp  UserInput.h
RetroFE/Source/Database/: Configuration.cpp  Configuration.h  DB.cpp  DB.h  Metadata.h  MetadataDatabase.cpp  MetadataDatabase.h
RetroFE/Source/Execute/: AttractMode.cpp  AttractMode.h  Launcher.cpp  Launcher.h
RetroFE/Source/Graphics/: ComponentItemBinding.cpp  ComponentItemBinding.h  ComponentItemBindingBuilder.cpp  ComponentItemBindingBuilder.h  Font.cpp  Font.h  FontCache.cpp  FontCache.h  Page.cpp  Page.h  PageBuilder.cpp  PageBuilder.h  ViewInfo.cpp  ViewInfo.h
RetroFE/Source/Graphics/Animate/: Animation.cpp  Animation.h  AnimationEvents.cpp  AnimationEvents.h  Tween.cpp  Tween.h  TweenSet.cpp  TweenSet.h  TweenTypes.h
RetroFE/Source/Graphics/Component/: Component.cpp  Component.h  Container.cpp  Container.h  Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  ReloadableMedia.cpp  ReloadableMedia.h  ReloadableScrollingText.cpp  ReloadableScrollingText.h  ReloadableText.cpp  ReloadableText.h  ScrollingList.cpp  ScrollingList.h  Text.cpp  Text.h  Video.cpp  Video.h  VideoBuilder.cpp  VideoBuilder.h  VideoComponent.cpp  VideoComponent.h
RetroFE/Source/Menu/: Menu.cpp  Menu.h
RetroFE/Source/Sound/: Sound.cpp  Sound.h
RetroFE/Source/Utility/: Log.cpp  Log.h  Utils.cpp  Utils.h
RetroFE/Source/Video/: GStreamerVideo.cpp  GStreamerVideo.h  IVideo.h  VideoFactory.cpp  VideoFactory.h
RetroFE/UnitTest/: CMakeLists.txt  testgtest.cpp
RetroFE/UnitTest/RetroFE/Utility/: Utils_UnitTest.cpp
Scripts/: Package.py
Scripts/Raspi/: install_sdl2_rpi.sh
Scripts/Raspi2/: install.sh
docs/: CONTROLS.md  GLOBAL_SETTINGS.md  LAUNCHERS.md  META_INFORMATION.md  README.md  SETTINGS.md
